Initial Commit. Adopter-Registration Frontend Work

--- a/modules/admin-ui/src/main/resources/public/org/opencastproject/adminui/languages/lang-en_US.json
+++ b/modules/admin-ui/src/main/resources/public/org/opencastproject/adminui/languages/lang-en_US.json
@@ -336,6 +336,23 @@
        "TITLE": "Statistics"
      }
    },
+   "REGISTRATION": {
+      "MODAL": {
+         "CAPTION": "Registration",
+         "SKIP": "Not now",
+         "CONTINUE": "Continue",
+         "BACK": "Back",
+         "INFORMATION": {
+           "HEADER": "Thank you for using Opencast!"
+         },
+         "SKIP_STATE": {
+           "HEADER": "Maybe next time!"
+         },
+         "SAVE_STATE": {
+           "HEADER": "Thank you for your registration!"
+         }
+      }
+   },
    "EVENTS": {
      "LICENSE": {
         "ALLRIGHTS": "All rights reserved",
