--- a/modules/admin-ui/src/main/resources/public/org/opencastproject/adminui/languages/lang-en_US.json
+++ b/modules/admin-ui/src/main/resources/public/org/opencastproject/adminui/languages/lang-en_US.json
@@ -79,7 +79,8 @@
      "USERS_GUIDE": "User's Guide",
      "DOCUMENTATION": "Documentation",
      "REST_DOC": "REST API Docs",
-     "HOTKEY_CHEAT_SHEET": "Keyboard Shortcuts"
+     "HOTKEY_CHEAT_SHEET": "Keyboard Shortcuts",
+     "ADOPTER_REGISTRATION": "Opencast Registration"
    },
    "NOTIFICATIONS": {
      "ACL_ADDED":           "The access policy has been created",
@@ -167,7 +168,11 @@
      "VIDEO_TOO_MANY_AUDIOS": "You cannot have more than one audio stream on a single video stream",
      "SERVER_UNRESPONSIVE": "Oops! The server seems to be unresponsive. Please try again later.",
      "SERVICE_UNAVAILABLE": "Oops! The server seems to be unresponsive. Please try again later.",
-     "ACTIVE_TRANSACTION": "This event can not be edited while there is an active workflow or transaction."
+     "ACTIVE_TRANSACTION": "This event can not be edited while there is an active workflow or transaction.",
+     "ADOPTER_PROFILE_UPDATED": "Profile information successfully updated.",
+     "ADOPTER_PROFILE_NOT_UPDATED": "Oops! Couldn't update profile information. Please try again!",
+     "ADOPTER_PROFILE_DELETED": "Profile information successfully deleted.",
+     "ADOPTER_PROFILE_NOT_DELETED": "Oops! Couldn't delete profile information. Please try again!"
    },
    "BULK_ACTIONS": {
       "CAPTION": "Actions",
@@ -308,20 +313,60 @@
        "TITLE": "Configuration"
      }
    },
-   "REGISTRATION": {
+   "ADOPTER_REGISTRATION": {
       "MODAL": {
          "CAPTION": "Registration",
          "SKIP": "Not now",
          "CONTINUE": "Continue",
          "BACK": "Back",
-         "INFORMATION": {
-           "HEADER": "Thank you for using Opencast!"
+         "LEGAL_INFO_STATE": {
+           "HEADER": "Terms of use & privacy policy"
+         },
+         "INFORMATION_STATE": {
+           "HEADER": "Thank you for using Opencast!",
+           "HEADER_HELP_US": "Help us to make Opencast even better!",
+           "INFORMATION_PARAGRAPH_1": "Our developers are constantly working to provide you the best possible user experience.",
+           "INFORMATION_PARAGRAPH_2": "To achieve that, we need to learn more about who uses Opencast and how it gets used.",
+           "INFORMATION_PARAGRAPH_3": "You can help us to gather that information with quick registration."
+         },
+         "FORM_STATE": {
+           "ORGANISATION": "Organisation",
+           "DEPARTMENT": "Department",
+           "COUNTRY": "Country",
+           "POSTAL_CODE": "Postal code",
+           "CITY": "City",
+           "CONTACT_INFO": "Contact information",
+           "GENDER": "Gender",
+           "GENDER_MALE": "male",
+           "GENDER_FEMALE": "female",
+           "FIRST_NAME": "First name",
+           "LAST_NAME": "Last name",
+           "STREET": "Street",
+           "NUMBER": "Number",
+           "ADDITIONAL_ADRESS_INFO": "Add. adress information",
+           "MAIL": "Email",
+           "CONTACT_ME": "Contact me for updates and secruity issues",
+           "WHICH_DATA_TO_SHARE": "Which data do you want to share?",
+           "USAGE_STATISTICS": "Usage statistcs",
+           "ERROR_REPORTS": "Error reports",
+           "TECHNICAL_SERVER_DATA": "Technical server data",
+           "READ_TERMS_OF_USE_BEFORE": "I have read and agree to the",
+           "READ_TERMS_OF_USE_LINK": "privacy policy and terms of use",
+           "READ_TERMS_OF_USE_AFTER": ""
          },
          "SKIP_STATE": {
-           "HEADER": "Maybe next time!"
+           "HEADER": "Maybe next time!",
+           "TEXT_LEADING_TO_PATH": "If you want to register later on, you can do that at",
+           "TEXT_LEADING_AFTER_PATH": "at any time.",
+           "TEXT_DEACTIVATE_INFO": "Also you can deactivate this automatic registration request there."
          },
-         "SAVE_STATE": {
-           "HEADER": "Thank you for your registration!"
+         "THANK_YOU_STATE": {
+           "HEADER": "Thank you for your registration!",
+           "TEXT_LEADING_TO_PATH": "You can change your data at ",
+           "TEXT_LEADING_AFTER_PATH": "at any time."
+         },
+         "DELETE_SUBMIT_STATE": {
+          "TEXT": "Are you sure you want to delete Profile?"
          }
       }
    },
